--- a/data.qmd
+++ b/data.qmd
@@ -17,12 +17,14 @@ output:
     self_contained: false
 ---
 
-:: {style="color: #603494;"}
+::: {style="color: #603494;"}
 #### **Landslide Factors Dataset Overview** {style="color: #603494;"}
 :::
 
-| Factor                            | **Source (Final Data Type)**                      | Scale       | Type         |
-|-----------------------|----------------------------|--------------|------------|
+Careful consideration and acquisition of appropriate data for various landslide susceptibility factors is of equal significance. To this end, Geoportale della Lombardia has maintained a comprehensive collection of geospatial data tailored for the Lombardy Region. Moreover, the digital lithology compiled by Bucci et al. has furnished an extensive classification of geological formations in Italy at a scale of 1:100 000. A selection and preparation of 15 landslide susceptibility factors have been undertaken for this study. These factors encompass a wide range of geological, topological, meteorological, hydrological, and human-related aspects.
+
+| Factor                            | Source (Final Data Type)                          | Scale       | Type         |
+|------------------|--------------------|------------------|------------------|
 | **Topographic Factors**           |                                                   |             |              |
 | \(1\) Elevation                   | Geoportale della Lombardia, DEM Derived (Raster)  | 15 × 15 m   | Continuous   |
 | \(2\) Slope Angle                 | Geoportale della Lombardia, DEM Derived (Raster)  | 15 × 15 m   | Continuous   |
@@ -43,3 +45,49 @@ output:
 | \(13\) Distance to Settlements    | OpenStreetMap (Raster)                            | 15 × 15 m   | Continuous   |
 | \(14\) Distance to Road Networks  | Geoportale della Lombardia (Raster)               | 15 × 15 m   | Continuous   |
 | \(15\) Land Use Land Cover        | Geoportale della Lombardia (Raster)               | 15 × 15 m   | Categorial   |
+
+: Summary of Landslide Factors used for Landslide Susceptibility Modelling 
+
+#### Topographic Factors
+
+Five topographic elements identified - elevation, slope angle, aspect, profile curvature, and plan curvature - are extracted from the 5m digital elevation model image. Elevations in landslide occurrence are largely attributed to its correlation with various climatic variables and slope angles have a large control over mass movements. Aspect, or slope direction, is indicative of the moisture content and solar exposure of the slope surface. Curvatures are variations in slope gradients. Profile and planar curvatures are two measures extensively used in landslide modelling, due to their direct impact on mass movement and flow. While profile curvature manages the speed of flow, plan curvature controls the direction of mass movement along a terrain. Curvature maps are classified into three categories: concave, flat, and convex.
+
+|                                                                       |                                                                                |
+|-----------------------------------------------------------------------|--------------------------------------------------------------------------------|
+| ![Elevation](images/elevation_m-01.png){alt="Elevation"}              | ![Slope Angle](images/slope_degree-01.png){alt="Slope Angle"}                  |
+| ![Aspect](images/aspect-01.png){alt="Aspect"}                         | ![Profile Curvature](images/profile_curvature-01.png){alt="Profile Curvature"} |
+| ![Plan Curvature](images/plan_curvature-01.png){alt="Plan Curvature"} |                                                                                |
+
+#### Geological Factors
+
+The two geological factors used are lithology and distance to fault. Lithological modifications affect the durability and compactness of soils and rocks and serve as important indicators of potential slope failures. The lithology classification of the study area is ​extracted from the​ 1:100000 Italy ​Geological Map​ provided by Bucci et al. led to 13 lithological classes. They were further categorized into metamorphic, plutonic, sedimentary rock, volcanic and unconsolidated classes. Faults are fractures between blocks of rock, along which displacements and mass movements can occur. Closer to major faults, the fracture density of a plane is greater and this produces more debris while reducing rock strength.
+
+|                                                        |                                                                               |
+|--------------------------------------------------------|-------------------------------------------------------------------------------|
+| ![Lithology](images/lithology-01.png){alt="Lithology"} | ![Distance to Faults](images/distance_fault-01.png){alt="Distance to Faults"} |
+
+#### Meteorological Factors
+
+Meteorological factors refer to the various weather conditions. In context of landslides, weather patterns, particularly precipitation, play a significant role. Heavy and prolonged rainfall can saturate and weak the underlying soils and rocks that form slopes, leading to slope instability and subsequently rainfall-induced landslides. This study uses average precipitation data to model landslide susceptibility.
+
+|                                                                                    |     |
+|------------------------------------------------------------------------------------|-----|
+| ![Average Precipitation](images/precipitation-01.png){alt="Average Precipitation"} |     |
+
+#### Hydrological Factors
+
+Hydrological factors also stimulate landslides. Four relevant hydrological factors explored in this study are distance to streams, ​Topographic Wetness Index (TWI​), ​Stream Power Index (SPI​) and Sediment Transport Index (STI). Proximity to streams gives a direct hydrological input that saturates soil and increases pore water pressures weakening slopes. TWI is a measure of topographic control on hydrological processes and soil moisture distribution \[50\] and areas with higher TWI values indicate greater concentration of hydrological flow and soil saturation. Increased soil moisture reduces shear strength and causes slope failures. SPI encapsulates hydrological​ processes in natural terrains and quantifies their erosive power based on flow accumulation and slope. Higher SPI is indicative of greater fluvial erosive power and potential slope undercutting. These hydrological factors capture important hydrological processes affecting slope stability: direct hydrological loading from proximity to streams; distributed soil patterns from TWI; and fluvial erosion power from SPI.
+
+|                                                                                   |                                                                                  |
+|-----------------------------------------------------------------------------------|----------------------------------------------------------------------------------|
+| ![Distance to Streams](images/distance_streams-01.png){alt="Distance to Streams"} | ![Topographic Wetness Index](images/twi-01.png){alt="Topographic Wetness Index"} |
+| ![Steam Power Index](images/spi-01.png){alt="Steam Power Index"}                  | ![Sediment Transport Index](images/sti-01.png){alt="Sediment Transport Index"}   |
+
+#### Anthropogenic Factors
+
+Anthropogenic factors pertain to human-induced changes that influence the predisposing characteristics of slopes and soils. This study focuses on distance to settlements, distance to road networks and ​land use land cover. The​ construction of road networks has a strong correlation with landslide susceptibility as it cuts slopes that alter natural topography and degrade slope stability. Manmade structures can exert substantial loads on the terrain and displace surfaces. Land cover is another crucial indicator of human alteration of vegetation areas. Previous research has also underlined the importance of landslide susceptibility assessment.  
+
+|                                                               |                                                           |
+|---------------------------------------------------------------|-----------------------------------------------------------|
+| ![Distance to Settlements](images/distance_settlement-01.png) | ![Distance to Road Networks](images/distance_road-01.png) |
+| ![Land Use Land Cover](images/lulc-01.png)                    |                                                           |
