--- a/data.qmd
+++ b/data.qmd
@@ -2,7 +2,7 @@
 title: "Data Preview"
 author:
   - name: Khant Min Naing
-  - name: Ann Mei Yi Victoria Grace
+  - name: Victoria Grace Ann
 date: 01-07-2024 
 date-modified: "last-modified"
 categories:
