--- a/iccsa.qmd
+++ b/iccsa.qmd
@@ -5,16 +5,14 @@ author:
   - name: Victoria Grace Ann
 date: 03-07-2024 
 date-modified: "last-modified"
-categories:
-  - R
-  - sf
-  - gwmodel
 output:
   distill::distill_article:
     code_folding: false
     toc: true
     self_contained: false
 ---
+
+![](images/IMG_4166 2-01.JPG){fig-align="center"}
 
 # What's up in Hanoi?
 
